[+] updated packages and docs. updated model for sign up
